# AndKittyInjector

./: CMakeLists.txt  README.md
AndKittyInjector/: Android.mk  CMakeLists.txt
AndKittyInjector/src/: Utils.cpp  Utils.hpp  main.cpp
AndKittyInjector/src/Injector/: KittyInjector.cpp  KittyInjector.hpp  KittyInjectorSyscall.hpp
AndKittyInjector/src/NativeBridge/: NativeBridge.hpp
